name:                   gnustep-config
version:                0.1
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               System
synopsis:               Interface to gnustep-config command-line tool
description:            Interface to gnustep-config command-line tool

Library
  hs-source-dirs:       src
  exposed-modules:      System.GNUstep.Config
  build-depends:        base >= 3 && < 5,
                        directory,
                        filepath,
                        process
