name: HOC-cbits
version: 1.0
license: BSD4
license-file: LICENSE
cabal-version: >= 1.2
build-type: Custom

Flag Trace
    default: False
    description: print trace messages to console from low-level code

Library
    build-depends: base >= 4
    hs-source-dirs: src
    exposed-modules:  HOC.CBits
                      HOC.CBits.Class
                      HOC.CBits.Exceptions
                      HOC.CBits.GetNewHaskellData
                      HOC.CBits.Invocation
                      HOC.CBits.Marshalling
                      HOC.CBits.MemoryManagement
                      HOC.CBits.MsgSend
                      HOC.CBits.NewClass
                      HOC.CBits.ObjectMap
                      HOC.CBits.RetainedHaskellPart
                      HOC.CBits.Selector
                      HOC.CBits.Statistics
                      HOC.CBits.Types
                      HOC.FFICallInterface
    
    c-sources: cbits/Class.m
               cbits/Exceptions.m
               cbits/FFICallInterface.m
               cbits/GetNewHaskellData.m
               cbits/Invocation.m
               cbits/Ivars.m
               cbits/Marshalling.m
               cbits/MemoryManagement.m
               cbits/Methods.m
               cbits/NewClass.m
               cbits/ObjectMap.m
               cbits/RetainedHaskellPart.m
               cbits/Selector.m
               cbits/Statistics.m
                
    extra-libraries: objc, ffi
    
    if os(darwin)
        include-dirs: /usr/include/ffi
        frameworks: Foundation
        cpp-options: -DMACOSX
        cc-options:  -DMACOSX
    else
        -- paths are inserted by Setup.hs
        extra-libraries: gnustep-base
        cpp-options: -DGNUSTEP
        cc-options: -DGNUSTEP
                    -fobjc-exceptions
                    -D_NATIVE_OBJC_EXCEPTIONS=1
    
    if flag(Trace)
        cpp-options: -DDO_LOG=1
        cc-options:  -DDO_LOG=1
