name: HOC
version: 1.0
license: BSD4
license-file: LICENSE
cabal-version: >= 1.9.2
build-type: Custom
extra-tmp-files: HOC.buildinfo

Flag BinaryInterfaces
    description: write HOC interface generator files in binary format
                 (requires binary package)

Library
    build-depends:      base >= 4,
                        HOC-cbits == 1.0,
                        mtl,
                        syb,
                        template-haskell,
                        th-extras,
                        unix
                   
    exposed-modules:
        HOC,
        HOC.NameCaseChange,
        HOC.Exception,
        HOC.SelectorNameMangling
    other-modules:
        HOC.Arguments,
        HOC.Base,
        HOC.CEnum,
        HOC.CannedCIFs,
        HOC.Class,
        HOC.DeclareClass,
        HOC.DeclareSelector,
        HOC.Dyld,
        HOC.ExportClass,
        HOC.ExternConstants,
        HOC.ExternFunctions,
        HOC.ID,
        HOC.MessageTarget,
        HOC.Invocation,
        HOC.MsgSend,
        HOC.NewClass,
        HOC.NewlyAllocated,
        HOC.SelectorMarshaller,
        HOC.Selectors,
        HOC.StdArgumentTypes,
        HOC.Super,
        HOC.TH,
        HOC.Unicode,
        HOC.Utilities,
        HOC.THDebug,
        HOC.CStruct

    hs-source-dirs: HOC
                
    extra-libraries: objc, ffi

    if os(darwin)
        include-dirs: /usr/include/ffi
        frameworks: Foundation
        cpp-options: -DMACOSX
    else
        -- paths are inserted by Setup.hs
        extra-libraries: gnustep-base
        cpp-options: -DGNUSTEP
        cc-options: -fobjc-exceptions
                    -D_NATIVE_OBJC_EXCEPTIONS=1

Executable hoc-ifgen
    main-is: Main.hs
    hs-source-dirs: HOC, InterfaceGenerator2

    build-depends:      base >= 4,
                        bytestring,
                        containers,
                        directory,
                        fgl,
                        filepath,
                        mtl,
                        old-time,
                        parsec >= 3.0,
                        pretty,
                        syb,
                        template-haskell
    
    if flag(BinaryInterfaces)
        build-depends:  binary >= 0.2
        cpp-options: -DBINARY_INTERFACES

Test-Suite hoc-test
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: HOC, InterfaceGenerator2, Tests
    
    cpp-options: -DTEST
    
    build-depends:      base >= 4,
                        containers,
                        HOC-cbits,
                        HUnit,
                        mtl,
                        parsec >= 3,
                        syb,
                        template-haskell,
                        th-extras,
                        unix

    extra-libraries: objc, ffi
    if os(darwin)
        frameworks: Foundation
        cpp-options: -DMACOSX
    else
        extra-libraries: gnustep-base
        cpp-options: -DGNUSTEP
