name:                   HOC
version:                1.0
license:                BSD4
license-file:           LICENSE
cabal-version:          >= 1.9.2
build-type:             Simple

Library
  hs-source-dirs:       src
  ghc-options:          -fwarn-unused-imports
                        -fwarn-unused-binds
  
  build-depends:        base >= 4,
                        HOC-cbits == 1.0,
                        libffi-experiments,
                        mtl,
                        objc-ffi,
                        syb,
                        template-haskell,
                        th-extras,
                        unix
  
  exposed-modules:      HOC
                        HOC.NameCaseChange
                        HOC.SelectorNameMangling
  
  other-modules:        HOC.Arguments
                        HOC.CEnum
                        HOC.Class
                        HOC.DeclareClass
                        HOC.DeclareSelector
                        HOC.Dyld
                        HOC.ExportClass
                        HOC.ExternConstants
                        HOC.ExternFunctions
                        HOC.ID
                        HOC.MessageTarget
                        HOC.Invocation
                        HOC.MsgSend
                        HOC.NewlyAllocated
                        HOC.SelectorMarshaller
                        HOC.Selectors
                        HOC.StdArgumentTypes
                        HOC.Super
                        HOC.TH
                        HOC.Unicode
                        HOC.Utilities
                        HOC.THDebug
                        HOC.CStruct
  
  if os(darwin)
    cpp-options:        -DMACOSX
  else
    cpp-options:        -DGNUSTEP

Test-Suite hoc-test
  type:                 exitcode-stdio-1.0
  main-is:              Test.hs
  hs-source-dirs:       src, tests
  
  build-depends:        base >= 4,
                        containers,
                        libffi-experiments,
                        HOC-cbits,
                        HUnit,
                        mtl,
                        objc-ffi,
                        parsec >= 3,
                        syb,
                        template-haskell,
                        test-framework,
                        test-framework-hunit,
                        th-extras,
                        unix
  
  if os(darwin)
    cpp-options:        -DMACOSX
  else
    cpp-options:        -DGNUSTEP
